# hangnadim-arff-ops

./: .gitignore  LICENSE  PERSONIL_POSTION.csv  Personil & Shift.csv  README.md  Vehicle.csv  docker-compose.yml  plan.md  unit_arff_hangnadim_manual.md
backend/: .env  Cargo.toml  Dockerfile  postman_collection.json  run_migrations.sh  test_api.sh
backend/.sqlx/: query-3531c1d5f5a6a3fdf3572716dfebf6fd61d38f7103802047f3efd9f9490ed2d1.json  query-9fe727db96f31c39beb45bce11ea5779d9f1184f9293a4f053a5e4e1c19edb01.json  query-b3c0f2264b69d1673b908d927e5f040310d6d787f804a06ca2b80e7c7a894a00.json
backend/migrations/: 0001_foundation.sql  0001_schema_foundation.sql  0002_org_structure.sql  0002_schema_hr_auth.sql  0003_auth_system.sql  0003_schema_assets.sql  0004_master_assets.sql  0004_schema_operations.sql  0005_ops_foundation.sql  0005_schema_inspections_maintenance.sql  0006_inspections.sql  0006_schema_task_generation.sql  0007_daily_ops.sql  0007_seed_essential_master.sql  0008_compliance_hr.sql  0009_audit_trail.sql  0010_seed_core.sql  0011_seed_master.sql  0012_add_vehicle_service_dates.sql  0013_gis_backend.sql  0014_seed_templates.sql  0015_maintenance_records.sql  0016_findings_system.sql  0017_kpi_engine.sql  0018_documents.sql  0019_enhanced_audit.sql  0020_ambulance_template.sql  0021_remove_apar_tag_item.sql  0022_maintenance_workflow.sql  0023_fitness_tracking.sql  0024_seed_bulk_personnel.sql  0024_seed_vehicles.sql  0025_seed_personnel_logins.sql  0025_seed_personnels.sql  0026_seed_duty_assignments.sql  0027_seed_user_logins.sql  0028_raci_rbac.sql  0029_fix_shift_timeblocks.sql  0032_daily_tasks.sql  0033_user_profiles.sql  (+20 more)
backend/seeds/: 01_seed_personnels.sql  03_seed_user_logins.sql  04_seed_fire_extinguishers.sql
backend/src/: auth.rs  (+4 more)
(+170 files in other folders)
